objects/Zoho__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Zoho Connection Configurations</description>
    <fields>
        <fullName>Zoho_AuthToken__c</fullName>
        <description>Zoho AuthToken</description>
        <inlineHelpText>Zoho AuthToken</inlineHelpText>
        <label>Zoho AuthToken</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoho_CRM_Url__c</fullName>
        <description>Zoho CRM Url</description>
        <inlineHelpText>Zoho CRM Url</inlineHelpText>
        <label>Zoho CRM Url</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>log_success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>log success in Zoho Log Object</description>
        <inlineHelpText>log success in Zoho Log Object</inlineHelpText>
        <label>log success</label>
        <type>Checkbox</type>
    </fields>
    <label>Zoho</label>
</CustomObject>